authwtsapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment-wtsapp
  namespace: lowcode-wtsapp  # Specify the namespace here
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: auth-wtsapp   
  template:
    metadata:
      labels:
        app: auth-wtsapp
    spec:
      containers:
      - name: auth-wtsapp
        image: sathish8329/whatsappauth:01
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /auth
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3        
        readinessProbe:  # Add readiness probe
          httpGet:
            path: /auth
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 5  # Set failure threshold to 3
      

---

apiVersion: v1
kind: Service
metadata:
  name: lowcode-auth-service-wtsapp
  namespace: lowcode-wtsapp  # Specify the namespace here
spec:
  selector:
    app: auth-wtsapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
