ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lowcode-ingress-wtsapp
  namespace: lowcode-wtsapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
spec:
  rules:
  - host: "whatsappkov.kovaion.ai"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lowcode-frontend-service-wtsapp
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: lowcode-api-service-wtsapp
            port:
              number: 8000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: lowcode-auth-service-wtsapp
            port:
              number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lowcode-ingress-wtsapp-one
  namespace: lowcode-wtsapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
spec:
  rules:
  - host: "sukirahairskin.kovaion.ai"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lowcode-frontend-service-wtsapp
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: lowcode-api-service-wtsapp
            port:
              number: 8000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: lowcode-auth-service-wtspp
            port:
              number: 8080
